# shellify

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  README.md  flake.nix  shellify.cabal
.github/workflows/: cabaltest.yml  test.yml
app/: Main.hs
docs/src/: flake-demo-nix-expert.cast  legacy-nix-demo.cast  updateScript
src/: Constants.hs  FlakeTemplate.hs  Options.hs  Shellify.hs  ShellifyTemplate.hs  TemplateGeneration.hs
src/Lib/: Shellify.hs
templates/: shellify.nix.j2
test/: Spec.hs  TestConstants.hs  TestHelpers.hs
test/outputs/: cowsay-from-global-nixpkgs-flake.nix  cowsay-from-local-nixpkgs-flake.nix  cowsay-from-system-custompkgs-flake.nix  cowsay-from-system-custompkgs-shell.nix  cowsay-from-system-nixpkgs-flake.nix  cowsay-from-system-nixpkgs-shell.nix  cowsay-from-user-nixpkgs-flake.nix  flake-for-a-nixpkgs-input.nix  flake-for-two-inputs-from-two-registries.nix  flake-for-two-inputs.nix  inputs-from-different-registries-flake.nix  inputs-from-different-registries.nix  inputs-from-unknown-source-flake.nix  inputs-from-unknown-source-shell.nix  multiple-repository-sources.nix  simple-two-build-inputs.nix  two-build-inputs-and-command-shell.nix  two-build-inputs-and-command.nix  two-build-inputs-from-two-sources.nix  two-nixpkgs-inputs-flake.nix
