cabal-version:      3.0
name:               shellify
version:            0.1.0.0

author: Daniel Rolls
maintainer: daniel.rolls.27@googlemail.com
license: Apache-2.0
license-files: LICENSE
copyright: (c) 2023 Daniel Rolls

category: Packaging
extra-source-files:
    CHANGELOG.md
    test/outputs/*.nix
data-files:
    templates/*.j2

common deps
    default-language: GHC2021
    build-depends:
        base ^>=4.16.4.0,
        text >=1.2.3.2 && <2.1
    default-extensions:
        LambdaCase
        OverloadedStrings
   
library
    import: deps
    exposed-modules:
        Shellify
        Paths_shellify
    hs-source-dirs: src
    autogen-modules:
        Paths_shellify
    default-extensions:
        QuasiQuotes
    build-depends:
        data-default-class >=0.1 && <0.2,
        directory >=1.3.6 && <1.4,
        ginger >=0.10.0 && <0.11,
        mtl >=2.2.2 && < 2.3,
        raw-strings-qq >=1.1 && < 1.2,
        unordered-containers >=0.2.14.0 && <0.3

executable shellify
    import: deps
    main-is: Main.hs
    build-depends:    
        shellify >=0
    hs-source-dirs: app

test-suite haskelltest-test
    import: deps
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Paths_shellify
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        hspec >=2.7.1 && <2.11,
        shellify >=0

