cabal-version:      3.0
name:               shellify
version:            0.1.0.0

author: Daniel Rolls
maintainer: daniel.rolls.27@googlemail.com
license: Apache-2.0
license-files: LICENSE
copyright: (c) 2023 Daniel Rolls

category: Packaging
extra-source-files:
        CHANGELOG.md
        test/outputs/*.nix

common deps
    default-language: GHC2021
    build-depends:
        base,
        raw-strings-qq,
        text
    default-extensions:
        LambdaCase
        OverloadedStrings
        QuasiQuotes
   
library
    import: deps
    exposed-modules:
        Constants
        FlakeTemplate
        Options
        Shellify
        ShellifyTemplate
        TemplateGeneration
    hs-source-dirs: src
    build-depends:
        containers,
        data-default-class,
        directory,
        extra,
        HStringTemplate,
        mtl,
        shake,
        unordered-containers

executable shellify
    import: deps
    main-is: Main.hs
    build-depends:    
        shellify >=0
    hs-source-dirs: app

test-suite haskelltest-test
    import: deps
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Paths_shellify
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        hspec,
        hspec-core,
        shellify >=0

